added code coverage and improved env logic with secret md
